@@ -1,3 +1,10 @@
+Mon Jul 13 00:48:32 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/encodings.c (get_less_charset, get_jless_charset): Cope with
+	  locale_charset being NULL; loosely based on a patch posted to
+	  mingw-msys by Mark Junker
+	  (http://osdir.com/ml/gnu.mingw.msys/2005-06/msg00012.html).
+
 Sun Jun 28 17:56:49 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	Don't create unnecessary database directories (Debian bug #472919).
